remove java 21 usage
Signed-off-by: xinyual <xinyual@amazon.com>